<resources>
    <string name="app_name">FinalCarrental</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="please_wait">Please Wait...</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="not_having_account_signup_here">Not having account?SignUp Here</string>
    <string name="parul_login">Parul Login</string>
    <string name="sign_up_to_rent_a_car">SIGN UP TO RENT A CAR</string>
    <string name="email_id">Email ID</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_am_already_a_member">I am already a member.</string>
    <string name="welcome_to_car_rental">WELCOME TO CAR RENTAL</string>
    <!--    <string name="login">Login</string>-->
    <string name="new_here_sign_up_instead">New Here ? Sign up instead.</string>
    <string name="rent_a_car">Rent a Car</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="passworderror">The password must contain at least 8 character containing, at least one letter and one number</string>

    <string name="emailerror">Enter a valid email</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!--    <string name="home">Home</string>-->
    <string name="profile">Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="other_info">Other Info</string>
    <string name="vehicle">Vehicle</string>
    <string name="share">Share</string>
    <string name="follow_us">Follow_us</string>
    <string name="home">Home</string>
    <string name="car_rent">Car Rent</string>
    <string name="logout">Logout</string>
    <string name="car_title">Car Title</string>

    <string name="car_description">Car Description</string>
    <string name="price">Price</string>
    <string name="fule_type">Fule Type</string>
    <string name="car_price">Car Price</string>
    <string name="book_now">Book Now</string>
    <string name="see_on_google_map">See on google map</string>
    <string name="rent_now">Rent Now</string>
    <string name="contact_parul_com">panktip55@gmail.com</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="account_info">Profile Info</string>
    <string name="send">Send</string>
    <string name="please_drop_an_email_or_team_will_contact_you_soon">Please Drop an Email Or Team will contact you soon..</string>
    <string name="share_app">Share App</string>
    <string name="car_name">Car Name : </string>
    <string name="rent_per_day">Rent per Day : </string>
    <string name="cgst_28">CGST 14 % :-</string>
    <string name="gst">CGST</string>
    <string name="sgst_14">SGST 14% :-</string>
    <string name="sgst">SGST</string>
    <string name="total">Total :</string>
    <string name="rent_total">Rent Total</string>
    <string name="procced_to_pay">Procced to Pay</string>
    <!--    <string name="password">Password</string>-->
</resources>