<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_call_24"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/vehicle" />
    </group>

    <item android:title="@string/other_info">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/follow_us" />
        </menu>
    </item>

</menu>