<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"

    tools:context=".ContactUs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/gradient"
            android:layout_marginTop="0dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="italic|bold"
                android:textSize="40sp"
                android:textColor="@color/colorPrimaryDark"

                />
            <View
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimaryDark"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_parul_com"
                android:enabled="false"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject"
                android:id="@+id/email_subject"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message"
                android:maxLines="4"
                android:padding="10dp"
                android:id="@+id/email_message"
                />
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/send"

                android:background="@color/colorPrimary"
                android:id="@+id/email_send"
                android:textSize="20sp"
                android:textColor="#fff"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:text="@string/please_drop_an_email_or_team_will_contact_you_soon"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="#636363"
                android:layout_marginStart="10sp"
                />





        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff">

        <include
            layout="@layout/main_nav_drawer"/>



    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>