<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:background="@drawable/gradient"
    android:layout_height="match_parent"
    tools:context=".Followus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_name"
                android:textSize="20sp"
                android:id="@+id/txtcrnm"
                android:layout_marginTop="20sp"
                android:layout_marginStart="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/ckcrnm"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:textAlignment="center"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:text="@string/car_name"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rent_per_day"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/txtppd"
                android:layout_below="@id/txtcrnm"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txtppd"
                android:textAlignment="textEnd"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="20sp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/ckprice"
                android:text="@string/car_price"
                android:layout_below="@id/ckcrnm"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/txtppd"
                android:layout_marginTop="16dp"
                android:id="@+id/ckvw1"
                android:layout_marginBottom="16dp"
                android:background="#fff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ckvw1"
                android:text="@string/cgst_28"
                android:layout_marginStart="20sp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/txtckgst"
                android:textAlignment="textEnd"
                />
            <TextView
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ckprice"
                android:layout_toEndOf="@+id/txtckgst"
                android:layout_marginTop="20sp"
                android:text="@string/gst"
                android:textSize="20sp"
                android:id="@+id/ckcgst"
                android:layout_marginEnd="20sp"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtckgst"
                android:text="@string/sgst_14"
                android:layout_marginStart="20sp"
                android:textStyle="bold"
                android:id="@+id/txtsgst"
                android:textSize="20sp"
                android:layout_marginTop="20sp"

                />
            <TextView
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:text="@string/sgst"
                android:layout_marginTop="20sp"
                android:layout_below="@id/ckcgst"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/cksgst"
                android:textAlignment="textEnd"
                android:layout_marginStart="20sp"
                android:layout_toEndOf="@+id/txtsgst"
                android:layout_marginEnd="20sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/txtsgst"
                android:layout_marginTop="16dp"
                android:id="@+id/ckvw2"
                android:layout_marginBottom="16dp"
                android:background="#fff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ckvw2"
                android:layout_marginTop="10sp"
                android:text="@string/total"
                android:textStyle="bold"
                android:id="@+id/txttotal"
                android:textSize="20sp"
                android:layout_marginStart="20sp"
                />
            <TextView
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ckvw2"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_toEndOf="@id/txttotal"
                android:text="@string/rent_total"
                android:textSize="20sp"
                android:layout_marginEnd="20sp"
                android:textStyle="bold"
                android:id="@+id/cktotal"
                android:textAlignment="textEnd"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/txttotal"
                android:layout_marginTop="16dp"
                android:id="@+id/ckvw3"
                android:layout_marginBottom="16dp"
                android:background="#fff"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textAlignment="center"
                android:text="@string/procced_to_pay"
                android:layout_below="@id/ckvw3"
                android:layout_marginEnd="10sp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_gradient"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/ckbtn"
                android:textColor="@android:color/holo_blue_light"
                android:padding="10dp"
                />

        </RelativeLayout>



    </LinearLayout>


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff">

        <include
            layout="@layout/main_nav_drawer"/>



    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>