<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:id="@+id/drawer_layout"
    tools:context=".cardetail_activity"
    tools:showIn="@layout/activity_cardetail_activity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_margin="0dp"

        app:cardCornerRadius="3dp"
        app:cardElevation="5dp"
        >

<!--        <include layout="@layout/main_toolbar"/>-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:id="@+id/dtl_imgcardtlview"
                    android:layout_alignParentTop="true"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/placeholder_img"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dtl_cartitle"
                        android:maxLines="1"
                        android:padding="5dp"

                        android:text="@string/car_title"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dtl_cardesc"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/car_description"
                        android:textAppearance="?android:attr/textAppearanceLarge"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dtl_carfuletyp"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/fule_type"
                        android:layout_marginTop="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"

                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dtl_carprice"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/price"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold"
                    />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#4ca6c2"
                    android:layout_marginTop="50dp"

                    >
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#4ca6c2"
                        android:gravity="center"
                        android:id="@+id/googlemapbtn"
                        android:padding="3dp"
                        android:textSize="20sp"

                        android:text="@string/see_on_google_map"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#4ca6c2"
                    android:layout_marginTop="10dp"

                    >
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#4ca6c2"
                        android:gravity="center"
                        android:padding="3dp"
                        android:id="@+id/rentbtn"
                        android:text="@string/book_now"
                        android:textSize="20sp"
                        />
                </LinearLayout>

            </LinearLayout>






        </ScrollView>




    </androidx.cardview.widget.CardView>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff">

        <include
            layout="@layout/main_nav_drawer"/>



    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>